# wenyaraujo.github.io

./: _config.yml  index.html  index.md
Projetos/: projetos.adoc  projetos.html
Projetos/bolhas/: CMakeCache.txt  CMakeLists.txt  Makefile  bolhas  bolhas.adoc  bolhas.cpp  bolhas.html  cmake_install.cmake
Projetos/detector_movimento/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  detector_movimento  detector_movimento.cpp  movimento.adoc  movimento.html
Projetos/filtro_homomorfico/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dft  dft.cpp  filtro_homomorfico.adoc  filtro_homomorfico.html
Projetos/filtros/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  filtros  filtros.adoc  filtros.cpp  filtros.html
Projetos/histograma/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  equalize  equalize.cpp  histograma.adoc  histograma.cpp  histograma.html
Projetos/negativo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  negativo.adoc  negativo.html  projetos.adoc  regiao  regiao.cpp  regions  regions.cpp  teste.txt
Projetos/pontilhismo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pontilhismo  pontilhismo.adoc  pontilhismo.cpp  pontilhismo.html
Projetos/tiltshift/: CMakeCache.txt  Makefile  cmake_install.cmake  tiltshift  tiltshift.adoc  tiltshift.cpp  tiltshift.html
Projetos/trocatroca/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  trocaregiao  trocaregiao.cpp  trocatroca.adoc  trocatroca.html
teste/: site.html
(+12 files in other folders)
