set (CMAKE_CXX_STANDARD 11)
cmake_minimum_required(VERSION 2.8)
project( pontilhismo )
set(OpenCV_DIR "/usr/local/opencv/share/OpenCV")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( pontilhismo pontilhismo.cpp )
target_link_libraries( pontilhismo ${OpenCV_LIBS} )
